--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
   - composer self-update
   - echo "sendmail_path='true'" >> `php --ini | grep "Loaded Configuration" | awk '{print $4}'`
 install:
-  - npm install -g grunt-cli
+  - npm install -g grunt-cli@^1.0.0-rc1
   - npm install -g mocha
   - ls -lRa
 script:
@@ -46,6 +46,7 @@ script:
   - ./test/create_working_copy.sh
   - cd test/working_copy/
   - echo "Working copy disk usage"; du -chs .
+  - grunt --version
   - grunt help
   - grunt --quiet --timer
   - echo "Fully built disk usage"; du -chs .
